apps/media/shoko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shoko-server
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 8111
      protocol: TCP
  selector:
    app: shoko-server
