apps/media/shoko/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: shoko-httproute
    namespace: media
    annotations:
        external-dns.alpha.kubernetes.io/target: iserlohn.thisratis.gay
spec:
    parentRefs:
        - name: gateway
          namespace: istio-ingress
          sectionName: wildcard-https
    hostnames:
        - shoko.thisratis.gay
    rules:
        - backendRefs:
              - name: shoko-server
                port: 80
